--- a/.github/workflows/EXPERIMENTAL-bindings-gnu_linux.yml
+++ b/.github/workflows/EXPERIMENTAL-bindings-gnu_linux.yml
@@ -54,7 +54,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: saucer/bindings
-          path: saucer
+          path: bindings
           ref: main
 
       - name: 👨‍💻 Setup container
@@ -139,7 +139,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: saucer/bindings
-          path: saucer
+          path: bindings
           ref: main
 
       - name: 👨‍💻 Setup container
