--- a/.github/workflows/bindings-gnu_linux.yml
+++ b/.github/workflows/bindings-gnu_linux.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: saucer/bindings
-          path: saucer
+          path: bindings
           ref: main
 
       - name: 📋 Install dependencies
@@ -86,7 +86,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: saucer/bindings
-          path: saucer
+          path: bindings
           ref: main
 
       - name: 📋 Install dependencies
@@ -160,7 +160,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: saucer/bindings
-          path: saucer
+          path: bindings
           ref: main
 
       - name: 👨‍💻 Setup container
