--- a/.github/workflows/bindings-macos.yml
+++ b/.github/workflows/bindings-macos.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: saucer/bindings
-          path: saucer
+          path: bindings
           ref: main
 
       - name: 🔨 Compile
