--- a/.github/workflows/saucer-prebuilt.yml
+++ b/.github/workflows/saucer-prebuilt.yml
@@ -106,7 +106,7 @@ jobs:
           name: "macOS-WebKit-${{ matrix.platform.arch }}-${{ matrix.build-type }}"
           path: "to_upload"
 
-  build-gnu_linux:
+  build-gnu_linux_qt5:
     strategy:
       fail-fast: false
       matrix:
@@ -151,6 +151,65 @@ jobs:
               deps: "apt update && apt install -y build-essential git gcc-14 cmake xvfb qtbase5-dev qtbase5-dev-tools qtdeclarative5-dev libqt5webchannel5-dev qtwebengine5-dev",
             }
 
+    runs-on: ubuntu-latest
+    name: "GNU_Linux-${{ matrix.platform.backend }}-${{ matrix.platform.arch }}-${{ matrix.build-type }}"
+
+    steps:
+      - name: 📥 Checkout actions code
+        uses: actions/checkout@v4
+
+      - name: 🛸 Checkout Saucer bindings code
+        uses: actions/checkout@v4
+        with:
+          repository: saucer/bindings
+          path: bindings
+          ref: main
+
+      - name: 👨‍💻 Setup container
+        uses: ./.github/actions/setup-container
+        with:
+          qemuArch: ${{ matrix.platform.qemuArch }}
+          dockerArch: ${{ matrix.platform.dockerArch }}
+          image: ${{ matrix.platform.image }}
+
+      - name: 📋 Install dependencies
+        uses: ./.github/actions/run-in-container
+        with:
+          command: ${{ matrix.platform.deps }}
+
+      - name: 🔨 Compile
+        uses: ./.github/actions/compile
+        with:
+          backend: ${{ matrix.platform.backend }}
+          platform: Linux
+          build-type: ${{ matrix.build-type }}
+          in-container: true
+          arm-hack: ${{ matrix.platform.arch }}
+
+      - name: ⚙️ Reorganize files
+        shell: bash
+        run: |
+          mkdir to_upload
+          cp "bindings/build/libsaucer-bindings.so" to_upload
+          cp "bindings/build/_deps/saucer-build/libsaucer.so" to_upload
+          cp "bindings/build/modules/desktop/libsaucer-bindings-desktop.so" to_upload
+          cp "bindings/build/modules/pdf/libsaucer-bindings-pdf.so" to_upload
+
+      - name: 📦 Upload Artifact
+        uses: ./.github/actions/upload-artifact
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          name: "GNU_Linux-${{ matrix.platform.backend }}-${{ matrix.platform.arch }}-${{ matrix.build-type }}"
+          path: "to_upload"
+
+  build-gnu_linux_qt6:
+    strategy:
+      fail-fast: false
+      matrix:
+        build-type:
+          - Release
+          # - Debug
+        platform:
           # Check these for architecture compatibility:
           # https://packages.debian.org/search?searchon=names&keywords=qt6-webengine-dev
           # https://hub.docker.com/_/debian/tags?page=&page_size=&ordering=&name=sid-slim
@@ -180,6 +239,65 @@ jobs:
               deps: "apt update && apt install -y build-essential git gcc-14 cmake xvfb qt6-base-dev qt6-tools-dev qt6-declarative-dev qt6-webchannel-dev qt6-webengine-dev qt6-svg-dev",
             }
 
+    runs-on: ubuntu-latest
+    name: "GNU_Linux-${{ matrix.platform.backend }}-${{ matrix.platform.arch }}-${{ matrix.build-type }}"
+
+    steps:
+      - name: 📥 Checkout actions code
+        uses: actions/checkout@v4
+
+      - name: 🛸 Checkout Saucer bindings code
+        uses: actions/checkout@v4
+        with:
+          repository: saucer/bindings
+          path: bindings
+          ref: main
+
+      - name: 👨‍💻 Setup container
+        uses: ./.github/actions/setup-container
+        with:
+          qemuArch: ${{ matrix.platform.qemuArch }}
+          dockerArch: ${{ matrix.platform.dockerArch }}
+          image: ${{ matrix.platform.image }}
+
+      - name: 📋 Install dependencies
+        uses: ./.github/actions/run-in-container
+        with:
+          command: ${{ matrix.platform.deps }}
+
+      - name: 🔨 Compile
+        uses: ./.github/actions/compile
+        with:
+          backend: ${{ matrix.platform.backend }}
+          platform: Linux
+          build-type: ${{ matrix.build-type }}
+          in-container: true
+          arm-hack: ${{ matrix.platform.arch }}
+
+      - name: ⚙️ Reorganize files
+        shell: bash
+        run: |
+          mkdir to_upload
+          cp "bindings/build/libsaucer-bindings.so" to_upload
+          cp "bindings/build/_deps/saucer-build/libsaucer.so" to_upload
+          cp "bindings/build/modules/desktop/libsaucer-bindings-desktop.so" to_upload
+          cp "bindings/build/modules/pdf/libsaucer-bindings-pdf.so" to_upload
+
+      - name: 📦 Upload Artifact
+        uses: ./.github/actions/upload-artifact
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          name: "GNU_Linux-${{ matrix.platform.backend }}-${{ matrix.platform.arch }}-${{ matrix.build-type }}"
+          path: "to_upload"
+
+  build-gnu_linux_gtk:
+    strategy:
+      fail-fast: false
+      matrix:
+        build-type:
+          - Release
+          # - Debug
+        platform:
           # Check these for architecture compatibility:
           # https://packages.debian.org/search?searchon=names&keywords=libgtk-4-dev
           # https://hub.docker.com/_/debian/tags?page=&page_size=&ordering=&name=sid-slim
